gke-dev/k8s-manifests/internal-load-balancer-ingress-path/internal-tcp-load-balancer.yaml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      networking.gke.io/load-balancer-type: "Internal"
      # cloud.google.com/backend-config: '{"default":"api-demo-v3-backend"}'
      # cloud.google.com/neg: '{"ingress":true}'
    name: api-demo-v3-tlb-service
  spec:
    ports:
    - name: my-http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: api-demo-service-v3
    type: LoadBalancer
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      networking.gke.io/load-balancer-type: "Internal"
      networking.gke.io/internal-load-balancer-allow-global-access: "true"
      # cloud.google.com/backend-config: '{"default":"api-demo-v3-backend"}'
      # cloud.google.com/neg: '{"ingress":true}'
    name: api-demo-v2-tlb-service
  spec:
    ports:
    - name: my-http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: api-demo-service-v2
    type: LoadBalancer
