gke-dev/k8s-manifests/internal-load-balancer-ingress-path/ingress.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: gce-internal
    name: api-demo-v2-ingress
  spec:
    rules:
    - http:
        paths:
        # - backend:
        #     service:
        #       name: api-demo-v2-service
        #       port:
        #         name: my-http
        #   path: /v2/*
        #   pathType: ImplementationSpecific
        - backend:
            service:
              name: api-demo-v2-service
              port:
                name: my-http
          path: /*
          pathType: ImplementationSpecific
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: gce-internal
    name: api-demo-v3-ingress
  spec:
    rules:
    - http:
        paths:
        # - backend:
        #     service:
        #       name: api-demo-v2-service
        #       port:
        #         name: my-http
        #   path: /v2/*
        #   pathType: ImplementationSpecific
        - backend:
            service:
              name: api-demo-v3-service
              port:
                name: my-http
          path: /*
          pathType: ImplementationSpecific
